# microservice

./: CMakeLists.txt
compose/: docker-compose.yaml
src/: CMakeLists.txt  main.cpp
test/configs/: dynamic_config_fallback.json  static_config.yaml
